Add ZenboGoToLocation project

--- a/RobotDevSample/src/main/AndroidManifest.xml
+++ b/RobotDevSample/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.asus.robotdevsample">
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +12,11 @@
         <activity android:name=".RobotDevSampleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.asus.intent.category.ZENBO" />
+                <category android:name="com.asus.intent.category.ZENBO_LAUNCHER" />
 
+                <!-- please comment out the following line when you want to launch to Zenbo App Store -->
+                <!-- See Zenbo Developer Web: Zenbo-SDK-Getting-Started: Important notes on Zenbo APP developing -->
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
