--- a/ZenboHelloWorld/src/main/AndroidManifest.xml
+++ b/ZenboHelloWorld/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
         <activity android:name="com.robot.asus.ZenboHelloWorld.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.asus.intent.category.ZENBO" />
+                <category android:name="com.asus.intent.category.ZENBO_LAUNCHER" />
 
+                <!-- please comment out the following line when you want to launch to Zenbo App Store -->
+                <!-- See Zenbo Developer Web: Zenbo-SDK-Getting-Started: Important notes on Zenbo APP developing -->
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
